@@ -12,7 +12,9 @@ Network Configuration:
 		- ONBOOT: if set to yes, this interface will be started on
 		          bootup, and stopped on shutdown
 		- ONHOTPLUG: if set to yes, this interface will be started
-		             and stopped on hotplug events
+		             and stopped on hotplug events.  This requires
+		             ifup and ifdown symlinked to /sbin, as well
+		             as the hotplug package
 
 		sysconfig/network-devices/ifup-*:
 		sysconfig/network-devices/ifdown-*:
